--- a/views/index.jade
+++ b/views/index.jade
@@ -8,7 +8,7 @@ block append head
 
 block content
   body
-      input(id='posts-data',type='hidden',value='#{posts}')
+
       div(id='home-div',class='row-fluid')
           div(class='span8 well-no-back')
               div(class='tabbable')
@@ -22,7 +22,8 @@ block content
 
                   div(class='tab-content')
                       div(class='tab-pane active',id='new')
-                          include home/post-content-bone
+                          div(id='posts')
+                              include home/post-content-bone
 
                       div(class='tab-pane',id='tab2')
                           p
