--- a/views/home/post-content-bone.jade
+++ b/views/home/post-content-bone.jade
@@ -3,33 +3,36 @@
 
 <!-- Templates -->
 script(type="text/template",id="item-template")
-    div.row-fluid
-        div.span8
-           p
-             a(href='/user/<%- _id %>')
 
-               img('src="<%- creator.name %>"')
-             | &nbsp;&nbsp;&nbsp;
-             a('href=/post/"<%- _id %>"')
-        div.span4
-            div.pull-right
-              span(class='badge badge-success') 评论 <%= comments.length %>
-                 | '<%- _id %>'
+        div.row-fluid
+            div.span8
+               p
+                 a('href=/user/"<%- _id %>"')
 
-    div.row-fluid
-          div.span12
-              p.blog-content
-                   | <%- content %>
+                   img('src="<%- creator.faceUrl %>"')
+                 | &nbsp;&nbsp;&nbsp;
+                 a('href=/post/"<%- _id %>"') sdfsdf <%- title %>
 
-    div.row-fluid
-           div.span12
-               li.up-and-down
-                   a(name='up-post',class='btn up','data="<%- _id %>"')
-                       i(class='icon-thumbs-up')
-                       | 顶(7690)
-                   a(name='down-post',class='btn down')
-                       i(class='icon-thumbs-down')
-                       | 踩(4578)
+            div.span4
+                div.pull-right
+                  span(class='badge badge-success') 评论 <%= comments.length %>
+
+
+        div.row-fluid
+              div.span12
+                  p.blog-content
+                       | <%- content %>
+
+        div.row-fluid
+               div.span12
+                   li.up-and-down
+                       a(name='up-post',class='btn up','data="<%- _id %>"')
+                           i(class='icon-thumbs-up')
+                           | 顶(7690)
+                       a(name='down-post',class='btn down')
+                           i(class='icon-thumbs-down')
+                           | 踩(4578)
+
 
 
 
