change up and down

--- a/views/home/post-content-bone.jade
+++ b/views/home/post-content-bone.jade
@@ -16,14 +16,14 @@ script(type="text/template",id="item-template")
             p.blog-content
                 | <%- content %>
     div.row-fluid
-        div.span12
+        div(class='span12',data-x='2825',data-y='2325',data-z='-3000' ,data-rotate='300' ,data-scale='1')
             a(name='up-post',class='btn up','data="<%- _id %>"')
                 i(class='icon-thumbs-up')
-                | 顶(7690)
+                | 顶(0)
             | &nbsp;
             a(name='down-post',class='btn down')
                 i(class='icon-thumbs-down')
-                | 踩(4578)
+                | 踩(0)
     hr.soft
 
 div(id='smart-cover',class='up-down-cover')
