--- a/views/layout.jade
+++ b/views/layout.jade
@@ -66,3 +66,7 @@ html(lang='en')
     script(src='/javascripts/google-code-prettify/html5.js')
     <![endif]-->
     script(src='/javascripts/google-code-prettify/prettify.js')
+
+    script(src='/javascripts/impress/impress.js')
+    script
+        impress().init();
