--- a/views/home/post-content-bone.jade
+++ b/views/home/post-content-bone.jade
@@ -6,7 +6,7 @@ script(type="text/template",id="item-template")
                 a('href=/user/"<%- _id %>"')
                     img('src="<%- creator.faceUrl %>"')
                 | &nbsp;&nbsp;&nbsp;
-                a('href=/post/"<%- _id %>"') sdfsdf <%- title %>
+                a('href=/post/"<%- _id %>"') <%- title %>
 
         div.span4
             div.pull-right
