--- a/views/user/show.jade
+++ b/views/user/show.jade
@@ -5,14 +5,42 @@ block append head
 
 
 block content
-  body
-    div(class='container well')
-        div(class='row-fluid')
-           div(class='span12')
-             h3.title 我的资料
-             p
-                a(href='/user/edit') edit
+    body
+        div(class='row-fluid ')
+            h3.title 我的资料
+        div(class='row-fluid well-no-back')
+            p
+                a(href='user/edit')  编辑
+            div(class='span6')
+                table(class='table table-striped')
+                    tbody
+                        tr
+                           td 头像
+                           td
+                              img(src='#{user.faceUrl}')
+                        tr
+                           td 用户名
+                           td #{user.name}
+                        tr
+                           td Email
+                           td #{user.email}
+                        tr
+                           td 性别
+                           td #{user.gender}
+                        tr
+                           td 注册时间
+                           td #{user.fromNow}
 
 
-        div(class='row-fluid')
 
+
+
+gender: { type: String, default: '未知' },
+    email:'String',
+    regTime:{ type: Date, default: Date.now },
+    face: {
+        thumbnails : String
+        ,media  : String
+        ,big:   String
+    },
+    votePosts:[Vote]
