--- a/views/includes/head.jade
+++ b/views/includes/head.jade
@@ -38,7 +38,7 @@ div.navbar.navbar-inverse.navbar-fixed-top
                                 li
                                   a(href='/user') 我的资料
                                 li
-                                  a(href='/u/#{user.name}') 我的主页
+                                  a(href='/user/#{user._id}') 我的主页
 
                                 li.divider
                                 li.nav-header 操作
