--- a/views/user-blogs.jade
+++ b/views/user-blogs.jade
@@ -19,7 +19,34 @@ block content
             div.span9.well-no-back
                 if typeof(posts) !== 'undefined' && posts.length > 0
                     each post, i in posts
-                        p(class='auto-line') #{post.fromNow} #{post.username} say: #{post.content}
+                        div.row-fluid
+                            div.span8
+                                a(href='/post/#{post._id}')
+                                    | #{post.title}
+                            div.span4
+                                small.pull-right
+                                    | #{post.fromNow}
+                        div.row-fluid
+                            div.span12
+                                | #{post.content}
+
+
                         hr.soft
+        div.row-fluid
+            div.span12
+                div(class='pagination pagination-right')
+                    ul
+                        li
+                            a(href='#') 上一页
+                        li
+                            a(href='#') 1
+                        li
+                            a(href='#') 2
+                        li
+                            a(href='#') 3
+                        li
+                            a(href='#') 4
+                        li
+                            a(href='#') 下一页
 
 
