--- a/views/review/review-show.jade
+++ b/views/review/review-show.jade
@@ -6,7 +6,7 @@ block content
     body
         div(id='review-container',class='container')
             div(class='row-fluid')
-                div(id='post-content',class='span8') sdfsdf
+                div(id='post-content',class='span8')
 
                 div(class='span4')
                     p 不能发表
