only keep userId in sesstion not changed totally

--- a/views/includes/head.jade
+++ b/views/includes/head.jade
@@ -37,7 +37,7 @@ div.navbar.navbar-inverse.navbar-fixed-top
                     else
                         li.dropdown
                               a(class='dropdown-toggle', href='#', data-toggle='dropdown')
-                                img(src='#{user.miniFace}')
+                                img(src='#{user.mini}',class='img-rounded')
                                 | &nbsp;&nbsp #{user.name}
                                 b.caret
                               ul.dropdown-menu
