--- a/views/user-blogs.jade
+++ b/views/user-blogs.jade
@@ -8,7 +8,7 @@ block content
             div.span3.well-no-back.align-center
                 div
                     p
-                       img(src='#{user.faceUrl}')
+                       img(src='#{user.normalFace}')
                     p  #{user.name}
                     p  #{user.regTimeStr}
                     p  #{user.flyAge}
