--- a/views/user/edit.jade
+++ b/views/user/edit.jade
@@ -32,7 +32,7 @@ block content
                                 input(id='face-id',type='hidden',name='faceId', value='#{user.faceId}')
                                 div.controls
                                     div.span2
-                                        img(class='img-polaroid img-rounded',id='image-face',src='#{user.faceUrl}',alt='头像')
+                                        img(class='img-polaroid img-rounded',id='image-face',src='#{user.normalFace}',alt='头像')
                                     div.controls
                                         div(id='file-uploader-demo1')
                                             noscript
