--- a/views/user/show.jade
+++ b/views/user/show.jade
@@ -17,7 +17,7 @@ block content
                         tr
                            td 头像
                            td
-                              img(src='#{user.faceUrl}')
+                              img(src='#{user.thumbnails}',class='img-polaroid img-rounded')
                         tr
                            td 用户名
                            td #{user.name}
