--- a/views/home/post-content-bone.jade
+++ b/views/home/post-content-bone.jade
@@ -3,8 +3,8 @@ script(type="text/template",id="item-template")
     div.row-fluid
         div.span8
             p
-                a('href=/user/"<%- _id %>"')
-                    img('src="<%- creator.faceUrl %>"',class='img-polaroid img-rounded')
+                a('href=/user/"<%- creator._id %>"')
+                    img('src="<%- creator.thumbnails %>"',class='img-polaroid img-rounded')
                 | &nbsp;&nbsp;&nbsp;
                 a('href=/post/"<%- _id %>"') <%- title %>
 
